demo-bootstrap/examples/inflate-arm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inflate-arm
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: inflate-arm
  template:
    metadata:
      labels:
        app: inflate-arm
    spec:
      terminationGracePeriodSeconds: 0
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: inflate
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.7
          resources:
            requests:
              cpu: "1"
      tolerations:
      - effect: NoSchedule
        key: arm64
        operator: Exists
