demo-bootstrap/examples/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: "1"
#      nodeName: "ip-10-0-41-219.us-west-2.compute.internal"
      # tolerations:
      # - key: CriticalAddonsOnly
      #   operator: Exists
